# assistant-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  temp.toml
ai_assistant_multi/: constants.py
commands/: chat.py  chat_cmd.py  session_cmd.py  setup.py  setup_cmd.py
core/: chat_session.py
utils/: ai_client.py  chat_handler.py  config_handler.py  config_manager.py  session_handler.py  session_manager.py
